--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.12.1",
     "@mui/styles": "^5.12.0",
     "axios": "^1.3.6",
+    "framer-motion": "^10.12.4",
     "geolib": "^3.3.3",
     "make-styles": "^0.0.1",
     "react": "^18.2.0",
@@ -23,7 +24,8 @@
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
-    "react-simple-maps": "^3.0.0"
+    "react-simple-maps": "^3.0.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
